--- a/.github/workflows/publish_preview_package.yml
+++ b/.github/workflows/publish_preview_package.yml
@@ -31,6 +31,7 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ steps.previoustag.outputs.tag }}
+        excludeTypes: doc,chore,style,ci,other,build
     
     - name: Commit CHANGELOG.md
       uses: stefanzweifel/git-auto-commit-action@v4
@@ -45,7 +46,17 @@ jobs:
         node-version: '12.x'
         registry-url: 'https://npm.pkg.github.com'
         scope: '@octocat' # Defaults to the user or organization that owns the workflow file
+
     - run: npm publish
       working-directory: ''
       env:
         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Create Release
+      uses: ncipollo/release-action@v1
+      with:
+        allowUpdates: true
+        draft: false
+        name: ${{ steps.previoustag.outputs.tag }}
+        body: ${{ steps.changelog.outputs.changes }}
+        token: ${{ secrets.GITHUB_TOKEN }}
