--- a/.github/workflows/publish_preview_package.yml
+++ b/.github/workflows/publish_preview_package.yml
@@ -60,3 +60,4 @@ jobs:
         name: ${{ steps.previoustag.outputs.tag }}
         body: ${{ steps.changelog.outputs.changes }}
         token: ${{ secrets.GITHUB_TOKEN }}
+        tag: ${{ steps.previoustag.outputs.tag }}
