--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -10,3 +10,12 @@ APPLY_FIXES: all # all, none, or list of linter keys
 SHOW_ELAPSED_TIME: true
 FILEIO_REPORTER: true
 # DISABLE_ERRORS: true # Uncomment if you want MegaLinter to detect errors but not block CI to pass
+
+ENABLE_LINTERS:
+    - COPYPASTE_JSCPD
+    - CSHARP_CSHARPIER
+    - CSS_STYLELINT 
+    - JSON_PRETTIER
+    - CSPELL
+    - REPOSITORY_GIT_DIFF
+    - REPOSITORY_SECRETLINT
